--- a/style.css
+++ b/style.css
@@ -13,18 +13,30 @@ body{
 
 
 #display {
-    border: 1px solid grey;
-    margin: 3em 0.1em 0em 0.1em;
+    margin: 3em 0.1em 0.1em 0.15em;
     border-radius: 5px;
+    background-color: azure;
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    width: 112px;
+    border: 0px ;
 }
 .container {
-    width: 150px;
-    height: 200px;
+    width: 120px;
+    height: 210px;
     background-color: black;
     display: grid;
     grid-template-columns: 1fr;
-    border: 5px solid grey;
     border-radius: 5px;
+    box-shadow: 1px 1px 1px 1px white;
+}
+
+.container p{
+    font-size: 12px;
+    font-weight: bold;
+    align-items: center;
+    color: white;
 }
 
 .buttons {
@@ -38,7 +50,7 @@ body{
 
 .buttons button {
     border: none;
-    border-radius: 50%;
+    border-radius: 10em;
     cursor: pointer;
     margin: 1px;
 }
@@ -83,9 +95,9 @@ body{
 }
 
 .buttons #equal:hover {
-    background-color: #0056b3;
+    background-color: blue;
 }
 
 .buttons #equal:active {
-    background-color: #003d80;
+    background-color: darkgreen;
 }   
