--- a/style.css
+++ b/style.css
@@ -11,6 +11,21 @@ body{
     background-size: cover;
 }
 
+.footer {
+    display: flex;
+    justify-content: center;
+    height:4px;
+}
+
+.footer a {
+    font-size: 12px;
+    color: white;
+}
+
+.footer img {
+    margin-top: 15px;
+}
+
 
 #display {
     margin: 3em 0.1em 0.1em 0.15em;
@@ -18,11 +33,15 @@ body{
     background-color: azure;
     display: flex;
     justify-content: end;
-    align-items: end;
-    width: 112px;
+    align-items: end;   
     border: 0px ;
+    white-space: nowrap;
+    overflow-x: auto; 
+    max-width: 100%;
+    height: 40px;
 }
 .container {
+    box-sizing: border-box;
     width: 120px;
     height: 210px;
     background-color: black;
