Readme.md and style.css modified

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body{
     box-sizing: border-box;
     width: 120px;
     height: 210px;
-    background-color: black;
+    background-color:#1c1c1c;
     display: grid;
     grid-template-columns: 1fr;
     border-radius: 5px;
