--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 .footer {
     display: flex;
     justify-content: center;
-    height:4px;
+    height: 20px;
 }
 
 .footer a {
@@ -28,7 +28,7 @@ body{
 
 
 #display {
-    margin: 3em 0.1em 0.1em 0.15em;
+    margin: 0em 0.1em 0.1em 0.15em;
     border-radius: 5px;
     background-color: azure;
     display: flex;
@@ -38,12 +38,13 @@ body{
     white-space: nowrap;
     overflow-x: auto; 
     max-width: 100%;
-    height: 40px;
+    height: 120px;
+    font-size: 45px;
 }
 .container {
     box-sizing: border-box;
-    width: 120px;
-    height: 210px;
+    width: 600px;
+    height: 670px;
     background-color:#1c1c1c;
     display: grid;
     grid-template-columns: 1fr;
@@ -61,7 +62,7 @@ body{
 .buttons {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(5,1fr);
+    grid-template-rows: repeat(5,100px);
     margin-bottom: 5px;
     margin-left: 2px;
     margin-right: 2px;
@@ -72,6 +73,8 @@ body{
     border-radius: 10em;
     cursor: pointer;
     margin: 1px;
+    font-size: 40px;
+    font-weight: bold;
 }
 
 #delete {
@@ -172,7 +175,7 @@ body{
 }
 
 
-@media screen and (max-width : 1650px) {
+@media screen and (max-width : 2000px) {
     .container {
         width: 620px;
         height: 580px;
@@ -194,4 +197,4 @@ body{
     .footer {
         height: 60px;
     }
-}
+} 
